--- a/.github/workflows/phase1-basic-checkout.yml
+++ b/.github/workflows/phase1-basic-checkout.yml
@@ -5,10 +5,10 @@ name: Phase 1 - Basic Checkout
 
 on:
   # Temporarily disabled - enable manually via workflow_dispatch
-  # push:
-  #   branches: [ main, phase1 ]
-  # pull_request:
-  #   branches: [ main ]
+  push:
+    branches: [ main, phase1 ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
